--- a/main.css
+++ b/main.css
@@ -98,6 +98,10 @@ a {
   opacity: 1 !important;
   transition-delay: 0.5s; }
 
+@media (min-width: 1500px) {
+  .navigation {
+    right: 10%; } }
+
 /*
 * === HEADER STYLES ===
 */
@@ -176,7 +180,7 @@ a {
     opacity: 0.9; }
   .header .header-image {
     width: 65%;
-    max-width: 865px;
+    max-width: 965px;
     opacity: 0.8;
     margin: 0 auto;
     display: block; }
@@ -329,7 +333,8 @@ a {
 * === Home ===
 */
 .about-section {
-  margin: 30px;
+  margin: 30px auto;
+  width: 95%;
   background: #f8f8f8;
   -webkit-transition: margin 0.5s ease-in-out, padding-top 0.5s ease-in-out;
   -moz-transition: margin 0.5s ease-in-out, padding-top 0.5s ease-in-out;
@@ -404,6 +409,11 @@ a {
       left: 12%; }
   .featured-wrapper .project-wrapper:nth-child(even) .project {
     background: #f8f8f8; }
+
+@media (min-width: 1500px) {
+  .home .content {
+    margin: 0 auto;
+    width: 90%; } }
 
 @media (max-width: 790px) {
   .about-section .text-wrapper {
@@ -692,6 +702,7 @@ a {
 
 .portfolio-page .image-section {
   width: 40%;
+  max-width: 820px;
   margin: 0 auto;
   padding-bottom: 75px; }
   .portfolio-page .image-section img {
@@ -726,14 +737,14 @@ a {
   .portfolio-page .section .bg {
     width: 100%; }
   .portfolio-page .section .text-wrapper {
-    padding: 100px 0;
-    width: 70%;
+    padding: 110px 0;
+    width: 60%;
+    max-width: 700px;
     position: relative;
     z-index: 10;
     margin: 0 auto; }
     .portfolio-page .section .text-wrapper p {
       line-height: 1.9;
-      width: 80%;
       margin: 0; }
 
 .portfolio-page .section.info-section {
