--- a/main.css
+++ b/main.css
@@ -217,7 +217,7 @@ a {
       width: 280px;
       margin-left: 560px; }
 
-@media only screen and (min-width: 1600px) {
+@media only screen and (min-width: 1650px) {
   .header .header-image {
     width: 80%;
     max-width: 1500px; }
@@ -557,6 +557,10 @@ a {
   position: relative;
   top: 30px; }
 
+@media (min-width: 1600px) {
+  .portfolio .portfolio-item {
+    height: 575px; } }
+
 @media (min-width: 1400px) {
   .portfolio .portfolio-item {
     height: 415px; } }
@@ -650,7 +654,8 @@ a {
       -webkit-box-shadow: 0 0 30px 5px rgba(0, 0, 0, 0.2);
       -moz-box-shadow: 0 0 30px 5px rgba(0, 0, 0, 0.2);
       box-shadow: 0 0 30px 5px rgba(0, 0, 0, 0.2);
-      width: 100%; }
+      width: 100%;
+      max-width: 900px; }
 
 .portfolio-page .button {
   border: 1px solid white;
