--- a/main.css
+++ b/main.css
@@ -100,7 +100,7 @@ a {
 
 @media (min-width: 1500px) {
   .navigation {
-    right: 10%; } }
+    right: 8%; } }
 
 /*
 * === HEADER STYLES ===
@@ -644,7 +644,8 @@ a {
     .portfolio-page .portfolio-header .text-wrapper h1 {
       margin: 0 0 15px;
       font-size: 4em;
-      line-height: 1.1; }
+      line-height: 1.1;
+      max-width: 500px; }
   .portfolio-page .portfolio-header .image-wrapper {
     width: 25%;
     max-height: 450px;
@@ -844,7 +845,23 @@ a {
   .portfolio-page .portfolio-header {
     max-height: 1200px; }
     .portfolio-page .portfolio-header .image-wrapper {
-      max-height: 600px; } }
+      max-height: 600px; }
+    .portfolio-page .portfolio-header .text-wrapper {
+      padding: 270px 14%; }
+      .portfolio-page .portfolio-header .text-wrapper h1 {
+        font-size: 5em; }
+      .portfolio-page .portfolio-header .text-wrapper p {
+        font-size: 2.2em; } }
+
+@media (min-width: 1850px) {
+  .deschutes-river.portfolio-page .portfolio-header .image-wrapper img,
+  .macro-market.portfolio-page .portfolio-header .image-wrapper img,
+  .music-visualizer.portfolio-page .portfolio-header .image-wrapper img {
+    max-width: 1100px; }
+  .graphic-design.portfolio-page .portfolio-header .image-wrapper,
+  .zealery.portfolio-page .portfolio-header .image-wrapper {
+    max-height: 800px;
+    width: 30%; } }
 
 @media only screen and (max-width: 950px) {
   .portfolio-page .info-wrapper {
@@ -856,7 +873,9 @@ a {
     width: 33%;
     right: 8%; }
   .portfolio-page .portfolio-header .text-wrapper {
-    padding: 170px 8%; }
+    padding: 110px 8%; }
+    .portfolio-page .portfolio-header .text-wrapper h1 {
+      font-size: 3.3em; }
   .music-visualizer.portfolio-page .portfolio-header .image-wrapper {
     width: 75%;
     right: -35px;
