--- a/main.css
+++ b/main.css
@@ -1019,3 +1019,9 @@ a {
   width: 100%;
   text-align: center;
   font-family: 'Open Sans'; }
+
+/*
+* === Advanced Writting ===
+*/
+.advanced-writting .body {
+  background: blue; }
