--- a/advanced-writting.css
+++ b/advanced-writting.css
@@ -18,15 +18,19 @@ p {
     line-height: 1.4em;
 }
 
+ul li {
+    list-style-type: none;
+    padding: 7px 0px;
+}
+
 .nav-bar ul li {
     display: inline-block;
     padding: 15px 20px;
     cursor: pointer;
-    list-style-type: none;
 }
 
 .button {
-  border: 2px solid black;
+    border: 2px solid black;
     width: 200px;
     padding: 15px;
     text-align: center;
@@ -34,9 +38,9 @@ p {
     font-size: 20px;
     border-radius: 3px;
 }
+
 .button:hover {
-  background: black;
-    border: 2px solid white;
+    background: black;
     color: white;
 }
 
@@ -48,10 +52,10 @@ p {
     padding: 20px 20%;
     margin-top: 75px;
     opacity: 0;
-    -webkit-transition: margin-top 0.9s ease-in-out, opacity 0.9s ease-in-out;
-    -moz-transition: margin-top 0.9s ease-in-out, opacity 0.9s ease-in-out;
-    -o-transition: margin-top 0.9s ease-in-out, opacity 0.9s ease-in-out;
-    transition: margin-top 0.9s ease-in-out, opacity 0.9s ease-in-out;
+    -webkit-transition: margin-top 0.7s ease-in-out, opacity 0.7s ease-in-out;
+    -moz-transition: margin-top 0.7s ease-in-out, opacity 0.7s ease-in-out;
+    -o-transition: margin-top 0.7s ease-in-out, opacity 0.7s ease-in-out;
+    transition: margin-top 0.7s ease-in-out, opacity 0.7s ease-in-out;
 }
 
 .slide-up {
