--- a/main.css
+++ b/main.css
@@ -332,6 +332,14 @@ a {
       font-weight: 500;
       padding-bottom: 10px;
       width: 80%; }
+    .about-section .text-wrapper .button {
+      text-align: center;
+      border: 1px solid black;
+      width: 220px;
+      margin: 0 auto;
+      padding: 15px; }
+    .about-section .text-wrapper .get-in-touch {
+      padding-top: 20px; }
     .about-section .text-wrapper .contact {
       margin-top: 35px;
       text-align: center; }
@@ -1023,5 +1031,97 @@ a {
 /*
 * === Advanced Writting ===
 */
-.advanced-writting .body {
-  background: blue; }
+.work-experience .content {
+  padding-top: 70px; }
+
+.work-experience .work {
+  padding: 10px 20%; }
+
+.work-experience .last {
+  padding-bottom: 65px; }
+
+.writting-piece.portfolio-page .portfolio-header {
+  background: #243E9C; }
+  .writting-piece.portfolio-page .portfolio-header .text-wrapper h1 {
+    font-size: 3em; }
+
+.work-experience.portfolio-page .portfolio-header {
+  background: #243E9C;
+  color: white; }
+
+.writting-piece .article {
+  padding: 50px 20%;
+  background: #f8f8f8; }
+  .writting-piece .article p {
+    padding: 10px 0; }
+  .writting-piece .article h2 {
+    padding-top: 20px; }
+
+.writting-section .text-wrapper {
+  padding: 20px 15%; }
+
+.writting-section .writting-work {
+  -moz-transition: background 0.2s ease-in;
+  -o-transition: background 0.2s ease-in;
+  -webkit-transition: background 0.2s ease-in;
+  transition: background 0.2s ease-in;
+  display: inline-block;
+  width: 44%;
+  margin: 2%;
+  vertical-align: top;
+  border: 1px solid black;
+  height: 520px;
+  position: relative; }
+  .writting-section .writting-work .wrapper {
+    padding: 25px; }
+    .writting-section .writting-work .wrapper h2 {
+      font-size: 2em;
+      padding-bottom: 15px; }
+    .writting-section .writting-work .wrapper .description {
+      -moz-transition: opacity 0.2s ease-in;
+      -o-transition: opacity 0.2s ease-in;
+      -webkit-transition: opacity 0.2s ease-in;
+      transition: opacity 0.2s ease-in; }
+  .writting-section .writting-work .view-work {
+    opacity: 0;
+    -moz-transition: opacity 0.2s ease-in;
+    -o-transition: opacity 0.2s ease-in;
+    -webkit-transition: opacity 0.2s ease-in;
+    transition: opacity 0.2s ease-in;
+    position: absolute;
+    bottom: 103px;
+    text-align: right;
+    width: 100%; }
+    .writting-section .writting-work .view-work p {
+      margin-right: 40%;
+      width: 0;
+      font-weight: 300;
+      width: auto; }
+    .writting-section .writting-work .view-work .line {
+      width: 30%;
+      margin-left: 64%;
+      height: 1px;
+      background: black;
+      right: 0;
+      margin-top: -13px; }
+
+.writting-section .writting-work:hover {
+  background: #3851A7; }
+  .writting-section .writting-work:hover .wrapper .description {
+    opacity: 0; }
+  .writting-section .writting-work:hover .wrapper .view-work {
+    opacity: 1; }
+
+@media (max-width: 1200px) {
+  .writting-section .writting-work {
+    display: block;
+    width: 70%;
+    margin: 30px auto; } }
+
+@media (max-width: 650px) {
+  .writting-section .text-wrapper {
+    padding: 20px 0; }
+  .writting-section .writting-work {
+    display: block;
+    width: 95%;
+    margin: 30px auto; } }
